--- a/SquarePeg.WebHost/SquarePeg.WebHost.csproj
+++ b/SquarePeg.WebHost/SquarePeg.WebHost.csproj
@@ -202,8 +202,9 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\UnauthenticatedLayout.cshtml" />
+    <Content Include="Views\Shared\AuthenticatedLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
