--- a/SquarePeg.WebHost/packages.config
+++ b/SquarePeg.WebHost/packages.config
@@ -6,6 +6,12 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
@@ -15,10 +21,12 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="MySql.Data" version="6.6.5" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="PostSharp" version="3.0.26" targetFramework="net45" />
   <package id="ServiceStack" version="3.9.46" targetFramework="net45" />
   <package id="ServiceStack.Common" version="3.9.46" targetFramework="net45" />
