--- a/SquarePeg.WebHost/Web.config
+++ b/SquarePeg.WebHost/Web.config
@@ -19,7 +19,7 @@
     </rules>
   </nlog>
   <connectionStrings>
-    <add name="SquarePeg" providerName="MySql.Data.MySqlClient" connectionString="Server=squarepegdev.cfe95aaaihel.us-east-1.rds.amazonaws.com;Database=squarepeg;Uid=square;Pwd=5q4r3p3g;Pooling=true;Connection Timeout=5" />
+    <add name="SquarePeg" providerName="MySql.Data.MySqlClient" connectionString="Server=XXX;Database=squarepeg;Uid=YYY;Pwd=ZZZ;Pooling=true;Connection Timeout=5" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
